<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:id="@+id/red_strip"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/Red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/retour2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/retour"
        app:layout_constraintTop_toTopOf="@id/red_strip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/red_strip"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/Retour" />

    <ImageView
        android:id="@+id/logo_f1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/formula_1"
        app:layout_constraintTop_toTopOf="@id/red_strip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/red_strip"
        android:layout_marginStart="160dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/Logo_F1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:text="@string/MyAccount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Info_Compte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Info_Compte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/MyAccount"
        android:textAlignment="textStart"
        android:background="@drawable/rectangle_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Info_Ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/MesTicket"
        android:textAlignment="textStart"
        android:background="@drawable/rectangle_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Info_Compte" />

    <TextView
        android:id="@+id/Ticket_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Acheter"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Info_Compte" />

    <Button
        android:id="@+id/ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/Acheter2"
        android:textAlignment="textStart"
        android:background="@drawable/rectangle_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Ticket_string" />

    <Button
        android:id="@+id/Deconnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="320dp"
        android:text="@string/Deconnexion"
        android:background="@drawable/rectangle_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ticket" />


</androidx.constraintlayout.widget.ConstraintLayout>