<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/red_strip"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/Red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/retour3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/retour"
        app:layout_constraintTop_toTopOf="@id/red_strip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/red_strip"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/Retour" />

    <ImageView
        android:id="@+id/logo_f1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/formula_1"
        app:layout_constraintTop_toTopOf="@id/red_strip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/red_strip"
        android:layout_marginStart="160dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/Logo_F1" />

    <ListView
        android:id="@+id/list_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/red_strip" />

    <Button
        android:id="@+id/Valide_Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="450dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/Delete2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/list_user"
        />

</androidx.constraintlayout.widget.ConstraintLayout>